--- a/home.html
+++ b/home.html
@@ -1,59 +1,23 @@
-<div style="width: 428px; height: 926px; position: relative; background: linear-gradient(0deg, white 0%, white 100%); border-radius: 20px; overflow: hidden">
-    <div class="StatusBar" style="width: 428px; height: 40px; padding-top: 11px; padding-bottom: 11px; padding-left: 24px; padding-right: 31px; left: 0px; top: 0px; position: absolute; justify-content: flex-start; align-items: flex-start; gap: 266px; display: inline-flex">
-      <div class="LeftOption" style="color: #0D0D0D; font-size: 15px; font-family: SF Pro; font-weight: 400; word-wrap: break-word">9:41</div>
-      <div class="RightOption" style="text-align: right; color: #0D0D0D; font-size: 15px; font-family: SF Pro; font-weight: 400; word-wrap: break-word">􀐿 􀙇 􀛨</div>
-    </div>
-    <div class="IconBack" style="width: 24px; height: 24px; left: 25px; top: 53px; position: absolute">
-      <div class="Vector" style="width: 7.10px; height: 15.84px; left: 7.90px; top: 4.08px; position: absolute; border: 1.50px #706C6C solid"></div>
-      <div class="Vector" style="width: 24px; height: 24px; left: 24px; top: 24px; position: absolute; transform: rotate(-180deg); transform-origin: 0 0; opacity: 0"></div>
-    </div>
-    <div class="Heading" style="width: 254px; height: 69px; left: 25px; top: 77px; position: absolute">
-      <div class="EmojiWavingHandSign" style="width: 21.51px; height: 20.79px; left: 113px; top: 45.73px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0">
-        <div class="Vector" style="width: 18.67px; height: 17.83px; left: 0px; top: 0.04px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #42ADE2"></div>
-        <div class="Vector" style="width: 15.30px; height: 16.67px; left: 2.08px; top: -0.04px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #FFDD67"></div>
-        <div class="Vector" style="width: 7.35px; height: 11.83px; left: 10.07px; top: -0.34px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #EBA352"></div>
-        <div class="Vector" style="width: 8.18px; height: 13.19px; left: 3.91px; top: 2.17px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #FFDD67"></div>
-        <div class="Vector" style="width: 5.84px; height: 8.43px; left: 4.56px; top: 2.18px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #EBA352"></div>
-        <div class="Vector" style="width: 8.18px; height: 13.18px; left: 6.16px; top: -0.08px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #FFDD67"></div>
-        <div class="Vector" style="width: 10.43px; height: 12.30px; left: 2.66px; top: 0.02px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #EBA352"></div>
-        <div class="Vector" style="width: 15.79px; height: 16.70px; left: 5.68px; top: 3.85px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #FFDD67"></div>
-        <div class="Group" style="width: 11.68px; height: 16.73px; left: 9.96px; top: 3.72px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0">
-          <div class="Vector" style="width: 11.68px; height: 16.73px; left: 0px; top: 0px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #EBA352"></div>
-          <div class="Vector" style="width: 3.97px; height: 6.92px; left: 2.71px; top: 5.54px; position: absolute; transform: rotate(-1.96deg); transform-origin: 0 0; background: #EBA352"></div>
-        </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Signin</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/home.css" />
+    <script src="./js/login.js" defer></script>
+  </head>
+  <body style="background-color: #248746">
+    <div style="display: flex">
+      <div id="leftdiv">
+        <p id="hey">Hey <span>Wil</span></p>
+        We look forward to serving you!
       </div>
-      <div class="HelloThere" style="left: 0px; top: 45px; position: absolute; color: #3A3A3A; font-size: 20px; font-family: Inter; font-weight: 600; letter-spacing: 0.40px; word-wrap: break-word">Hello there</div>
-      <div class="EduBespoke" style="left: 124px; top: 0px; position: absolute; color: #A531DC; font-size: 20px; font-family: Inter; font-weight: 600; letter-spacing: 0.40px; word-wrap: break-word">Edu Bespoke</div>
-    </div>
-    <div class="SubHeading" style="width: 359px; left: 25px; top: 166px; position: absolute; color: #9E9E9E; font-size: 14px; font-family: Inter; font-weight: 400; letter-spacing: 0.28px; word-wrap: break-word">Please enter you email & password to create an account </div>
-    <div class="Email" style="width: 378px; height: 62px; left: 25px; top: 252px; position: absolute">
-      <div class="YourEmail" style="left: 0px; top: 0px; position: absolute; color: #3A3A3A; font-size: 14px; font-family: Inter; font-weight: 600; letter-spacing: 0.28px; word-wrap: break-word">Your email</div>
-      <div class="EnterYourEmail" style="left: 0px; top: 37px; position: absolute; color: #CACACA; font-size: 16px; font-family: Inter; font-weight: 500; letter-spacing: 0.32px; word-wrap: break-word">Enter your email</div>
-      <div class="Vector10" style="width: 378px; height: 0px; left: 0px; top: 62px; position: absolute; border: 1.50px #4300B1 solid"></div>
-      <div class="MessageLight" style="width: 26px; height: 26px; left: 352px; top: 33px; position: absolute">
-        <div class="Rectangle1" style="width: 17.33px; height: 13px; left: 4.33px; top: 6.50px; position: absolute; border-radius: 2px; border: 1px #CACACA solid"></div>
-        <div class="Vector3" style="width: 17.33px; height: 4.33px; left: 4.33px; top: 9.75px; position: absolute; border-radius: 2px; border: 1px #CACACA solid"></div>
+      <div id="rightdiv">
+        <img src="./images/Embu Uni.png" alt="" width="100px" />
       </div>
     </div>
-    <div class="Password" style="width: 378px; height: 62px; left: 25px; top: 364px; position: absolute">
-      <div class="CreatePassword" style="left: 0px; top: 0px; position: absolute; color: #3A3A3A; font-size: 14px; font-family: Inter; font-weight: 600; letter-spacing: 0.28px; word-wrap: break-word">Create password</div>
-      <div class="CreateYourPassword" style="left: 0px; top: 37px; position: absolute; color: #CACACA; font-size: 16px; font-family: Inter; font-weight: 500; letter-spacing: 0.32px; word-wrap: break-word">Create your password</div>
-      <div class="Vector11" style="width: 378px; height: 0px; left: 0px; top: 62px; position: absolute; border: 1.50px #4300B1 solid"></div>
-      <div class="EyeLight" style="width: 26px; height: 26px; left: 352px; top: 33px; position: absolute">
-        <div class="Vector132" style="width: 21.67px; height: 15.17px; left: 2.17px; top: 5.42px; position: absolute; border: 1px #CACACA solid"></div>
-        <div class="Ellipse104" style="width: 6.50px; height: 6.50px; left: 9.75px; top: 9.75px; position: absolute; border-radius: 9999px; border: 1px #CACACA solid"></div>
-      </div>
-    </div>
-    <div class="Button" style="width: 378px; height: 60px; left: 25px; top: 576px; position: absolute">
-      <div class="Rectangle14" style="width: 378px; height: 60px; left: 0px; top: 0px; position: absolute; background: linear-gradient(0deg, #4300B1 0%, #4300B1 100%); box-shadow: 4px 4px 10px -1px rgba(23, 195, 206, 0.35); border-radius: 17px"></div>
-      <div class="Continue" style="width: 113.20px; height: 27px; left: 132.40px; top: 16px; position: absolute; color: white; font-size: 24px; font-family: Inter; font-weight: 700; letter-spacing: 0.48px; word-wrap: break-word">Continue</div>
-    </div>
-    <div class="Group39" style="left: 98px; top: 666px; position: absolute">
-      <div class="AlreadyHaveAnAccount" style="left: 0px; top: 0px; position: absolute; color: black; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 22px; letter-spacing: 0.28px; word-wrap: break-word">Already have an account?</div>
-      <div class="SignIn" style="left: 185px; top: 0px; position: absolute; color: #4300B1; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 22px; letter-spacing: 0.28px; word-wrap: break-word">Sign In</div>
-    </div>
-    <div class="Agreement" style="width: 374px; height: 44px; left: 24px; top: 476px; position: absolute">
-      <div class="Rectangle26" style="width: 20px; height: 20px; left: 0px; top: 6px; position: absolute; border-radius: 3px; border: 2px #4300B1 solid"></div>
-      <div class="IAgreeToEduBespokePublicAgreementTermsPrivacyPolicy" style="width: 344px; left: 30px; top: 0px; position: absolute"><span style="color: black; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 22px; letter-spacing: 0.28px; word-wrap: break-word">I agree to Edu Bespoke  </span><span style="color: #4300B1; font-size: 14px; font-family: Inter; font-weight: 500; line-height: 22px; letter-spacing: 0.28px; word-wrap: break-word">Public Agreement, Terms, & Privacy Policy.</span></div>
-    </div>
-  </div>
+  </body>
+</html>
