--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div style="padding-top: 20px; margin: auto; width: fit-content; height: auto;">
-      <h2 style="color: #248746; text-align: center;">Welcome</h5>
+      <h2 style="text-align: center;" id="edubespoke">Edu Bespoke</h5>
         <p style="font-size: 80%;  padding-top: 5px;">Please enter your information below to sign in to your account</p>
         <br>
         <form action="">
