--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div style="padding-top: 30px; display: flex; justify-content: center">
-      <img src="./images/Embu Uni.png" alt="" width="100px" />
+      <img src="img/edubespokelogo.png" alt="" width="90px" />
     </div>
 
     <div style="padding-top: 20px; margin: auto; width: fit-content; height: auto;">
-      <h2 style="text-align: center;" id="edubespoke">Edu Bespoke</h5>
-        <p style="font-size: 80%;  padding-top: 5px;">Please enter your information below to sign in to your account</p>
+      <h2 style="text-align: center;" id="edubespoke">Edu Bespoke</h2>
+        <p style="font-size: 80%;  padding-top: 5px;">Please enter your email & password to sign in to your account</p>
         <br>
         <form action="">
           <p>Email</p>
