--- a/signup.html
+++ b/signup.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Signin</title>
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/login.js" defer></script>
   </head>
   <body>
     <div style="padding-top: 30px; display: flex; justify-content: center">
-      <img src="./images/Embu Uni.png" alt="" width="100px" />
+      <img src="img/edubespokelogo.png" alt="" width="90px" />
     </div>
 
     <div style="padding-top: 20px; margin: auto; width: fit-content; height: auto;">
-      <h2 style="color: #248746; text-align: center;">Create a new account</h5>
-        <p style="font-size: 80%;  padding-top: 5px;">Please enter your information below to create a new account</p>
+      <h2 style="text-align: center;" id="edubespoke">Edu Bespoke</h2>
+        <p style="font-size: 80%;  padding-top: 5px;">Please enter your email & password to create an account</p>
         <br>
         <form action="">
-          <p>Name</p>
-          <input type="text" name="" id=""> <br><br>
-          <p>Email</p>
+          <p>Your Email</p>
           <input type="email" name="" id=""> <br> <br>
-          <p>Password</p>
+          <p>Create Password</p>
           <input type="password" name="" id="pwd"> <br> <br>
-          <input type="checkbox" onclick="showPassword()" >Show Password <br> <br>
-  
+          <input type="checkbox" onclick="showPassword()"> <span id="showpwd">Show Password</span> <br> <br>
+          <input type="checkbox" required> <span id="showpwd">I agree to Edu Bespoke <a href="#" target="_blank">Terms & Conditions.</a></span> <br> <br>
           <div style="display: flex;font-size: 80%; justify-content: space-between;">
               <div>
                   <input type="checkbox" name="remember" id="">
                   <span>Remember me</span>
               </div>
               <div>
-                  <span><a href="#">Forgot Password</a></span>
+                  <a href="#">Forgot Password</a>
               </div>
           </div>
-          <input type="submit" name="" id="" value="Create account"> <br> <br>
+          <input type="submit" name="" id="" value="Sign In"> <br> <br>
         </form>
 
-        <p style="text-align: center; font-size: 80%;">Already have an account? <span style="color: #248746;">Sign In</span></p>
+        <p style="text-align: center; font-size: 80%;">Don't have an account?
+          <a href="./signup.html">Sign Up</span>
+        </p>
         
     </div>
   </body>
