sign up page completed

--- a/signup.html
+++ b/signup.html
@@ -24,20 +24,11 @@
           <input type="password" name="" id="pwd"> <br> <br>
           <input type="checkbox" onclick="showPassword()"> <span id="showpwd">Show Password</span> <br> <br>
           <input type="checkbox" required> <span id="showpwd">I agree to Edu Bespoke <a href="#" target="_blank">Terms & Conditions.</a></span> <br> <br>
-          <div style="display: flex;font-size: 80%; justify-content: space-between;">
-              <div>
-                  <input type="checkbox" name="remember" id="">
-                  <span>Remember me</span>
-              </div>
-              <div>
-                  <a href="#">Forgot Password</a>
-              </div>
-          </div>
-          <input type="submit" name="" id="" value="Sign In"> <br> <br>
+          <input type="submit" name="" id="" value="Continue"> <br> <br>
         </form>
 
-        <p style="text-align: center; font-size: 80%;">Don't have an account?
-          <a href="./signup.html">Sign Up</span>
+        <p style="text-align: center; font-size: 80%;">Already have an account?
+          <a href="./signup.html">Sign In</span>
         </p>
         
     </div>
