building home page

--- a/home.html
+++ b/home.html
@@ -9,15 +9,14 @@
     <link rel="stylesheet" href="./css/home.css" />
     <script src="./js/login.js" defer></script>
   </head>
-  <body style="background-color: #248746">
-    <div style="display: flex">
-      <div id="leftdiv">
-        <p id="hey">Hey <span>Wil</span></p>
-        We look forward to serving you!
+  <body>
+
+    <div style="padding-top: 20px; margin: auto; width: fit-content; height: auto;">
+      <h2 style="text-align: center;" id="edubespoke"> Welcome to Edu Bespoke</h2>
+      <div style="padding-top: 30px; display: flex; justify-content: center">
+        <img src="img/edubespokelogo.png" alt="" width="90px" />
       </div>
-      <div id="rightdiv">
-        <img src="./images/Embu Uni.png" alt="" width="100px" />
-      </div>
+          <input type="submit" name="" id="" value="Engage"> <br> <br> 
     </div>
   </body>
 </html>
