--- a/home.html
+++ b/home.html
@@ -10,9 +10,9 @@
     <script src="./js/login.js" defer></script>
   </head>
   <body>
-
-    <div style="padding-top: 20px; margin: auto; width: fit-content; height: auto;">
+    <div style="width: fit-content; height: auto;" id="home-container">
       <h2 style="text-align: center;" id="edubespoke"> Welcome to Edu Bespoke</h2>
+      
       <div style="padding-top: 30px; display: flex; justify-content: center">
         <img src="img/edubespokelogo.png" alt="" width="90px" />
       </div>
