--- a/home.html
+++ b/home.html
@@ -10,13 +10,13 @@
     <script src="./js/login.js" defer></script>
   </head>
   <body>
-    <div style="width: fit-content; height: auto;" id="home-container">
+    <div style="width: fit-content;" id="home-container">
       <h2 style="text-align: center;" id="edubespoke"> Welcome to Edu Bespoke</h2>
       
-      <div style="padding-top: 30px; display: flex; justify-content: center">
+      <div style="display: flex; justify-content: center">
         <img src="img/edubespokelogo.png" alt="" width="90px" />
       </div>
-          <input type="submit" name="" id="" value="Engage"> <br> <br> 
+      <button>Engage</button>
     </div>
   </body>
 </html>
