edu bespoke info elements added

--- a/chat.html
+++ b/chat.html
@@ -7,14 +7,25 @@
     <title>Signin</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/chat.css" />
     <script src="./js/login.js" defer></script>
   </head>
   <body>
-    <div style="width: fit-content;" id="home-container">
-      <h2 style="text-align: center;" id="edubespoke"> Welcome to Edu Bespoke</h2>
-      
-      <div style="display: flex; justify-content: center">
-        <img src="img/edubespokelogo.png" alt="" width="90px" />
+    <div style="width: fit-content" id="home-container">
+      <h2 style="text-align: center" id="edubespoke">Edu Bespoke</h2>
+      <hr />
+      <div id="chat-container" style="display: flex; justify-content: center">
+        <div id="info">
+          <div id="info-text">
+            Edu Bespoke is an Artificial Intelligence study assistant developed
+            by GDSC UoEm
+          </div>
+
+          <div id="info-text">
+            Edu Bespoke is an Artificial Intelligence study assistant developed
+            by GDSC UoEm
+          </div>
+        </div>
       </div>
       <button>Engage</button>
     </div>
