styling upload docs buttons

--- a/chat.html
+++ b/chat.html
@@ -22,11 +22,29 @@
           </div>
 
           <div id="info-text">
-            Edu Bespoke is an Artificial Intelligence study assistant developed
-            by GDSC UoEm
+            ChatGPT is an artificial-intelligence chatbot developed by OpenAI
           </div>
         </div>
       </div>
+      <div>Upload Documents</div>
+      <div id="upload">
+        <button id="upload-buttons">
+          <span>Notes</span>
+          <input type="file" name="" id="" />
+        </button>
+
+        <button id="upload-buttons">
+          <span>Outline</span>
+          <input type="file" name="" id="" />
+        </button>
+
+        <button id="upload-buttons">
+          <span>Timetable</span>
+          <input type="file" name="" id="" />
+        </button>
+      </div>
+      <button id="submit-docs"><img src="./img/send-2.png" alt="" /></button>
+
       <button>Engage</button>
     </div>
   </body>
