--- a/chat.html
+++ b/chat.html
@@ -26,7 +26,7 @@
           </div>
         </div>
       </div>
-      <div>Upload Documents</div>
+      <b style="color: #4300b1">Upload Documents</b>
       <div id="upload">
         <button id="upload-buttons">
           <span>Notes</span>
