prompt div created

--- a/chat.html
+++ b/chat.html
@@ -45,7 +45,10 @@
       </div>
       <button id="submit-docs"><img src="./img/send-2.png" alt="" /></button>
 
-      <button>Engage</button>
+      <div id="prompt-div">
+        <input type="text" name="" id="" />
+        <button id="submit-docs"><img src="./img/send-2.png" alt="" /></button>
+      </div>
     </div>
   </body>
 </html>
