home page - engage buttin styles

--- a/home.html
+++ b/home.html
@@ -10,13 +10,13 @@
     <script src="./js/login.js" defer></script>
   </head>
   <body>
-    <div style="width: fit-content;" id="home-container">
-      <h2 style="text-align: center;" id="edubespoke"> Welcome to Edu Bespoke</h2>
-      
+    <div style="width: fit-content" id="home-container">
+      <h2 style="text-align: center" id="edubespoke">Welcome to Edu Bespoke</h2>
+
       <div style="display: flex; justify-content: center">
         <img src="img/edubespokelogo.png" alt="" width="90px" />
       </div>
-      <button>Engage</button>
+      <button><a href="./chat.html">👆 Engage</a></button>
     </div>
   </body>
 </html>
