--- a/signup.html
+++ b/signup.html
@@ -17,18 +17,18 @@
       <h2 style="text-align: center;" id="edubespoke">Edu Bespoke</h2>
         <p style="font-size: 80%;  padding-top: 5px;">Please enter your email & password to create an account</p>
         <br>
-        <form action="">
+        <form action="./home.html">
           <p>Your Email</p>
           <input type="email" name="" id=""> <br> <br>
           <p>Create Password</p>
           <input type="password" name="" id="pwd"> <br> <br>
           <input type="checkbox" onclick="showPassword()"> <span id="showpwd">Show Password</span> <br> <br>
           <input type="checkbox" required> <span id="showpwd">I agree to Edu Bespoke <a href="#" target="_blank">Terms & Conditions.</a></span> <br> <br>
-          <input type="submit" name="" id="" value="Continue"> <br> <br>
+          <input type="submit" name="" id="" value="Continue" target="./home.html"> <br> <br>
         </form>
 
         <p style="text-align: center; font-size: 80%;">Already have an account?
-          <a href="./signup.html">Sign In</span>
+          <a href="./index.html">Sign In</span>
         </p>
         
     </div>
