--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
       <div style="display: flex; justify-content: center">
         <img src="img/edubespokelogo.png" alt="" width="90px" />
       </div>
-      <button><a href="./chat.html">👆 Engage</a></button>
+      <button id="engage-btn"><a href="./chat.html">👆 Engage</a></button>
     </div>
   </body>
 </html>
