--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2 style="text-align: center;" id="edubespoke">Edu Bespoke</h2>
         <p style="font-size: 80%;  padding-top: 5px;">Please enter your email & password to sign in to your account</p>
         <br>
-        <form action="">
+        <form action="./home.html">
           <p>Email</p>
           <input type="email" name="" id=""> <br> <br>
           <p>Password</p>
